--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
 <div class="bg-neutral-900 flex justify-between">
     <!-- Logo on the left -->
     <div class="space-x-1 flex items-center">
-        <img class="p-1 rounded-3xl" src="/src/assets/logo.gif" alt="Logo" width="65px" height="65px"/>
+        <img class="p-1 rounded-3xl" src="./assets/logo.gif" alt="Logo" width="65px" height="65px"/>
         <p class="sm:text-2xl">MacroHQ</p>
     </div>
     <!-- Buttons on the right -->
     <div class="space-x-1 flex items-center">
-        <img class="invert" src="/src/assets/account.svg" alt="Account" width="48" height="48">
+        <img class="invert" src="./assets/account.svg" alt="Account" width="48" height="48">
     </div>
 </div>
 </body>
