--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="MacroHQ" property="og:title">
+    <meta content="MacroHQ Website" property="og:description">
+    <meta content="https://macro-hq.github.io/Website/" property="og:url">
+    <meta content="https://macro-hq.github.io/Website/assets/banner_slim.png" property="og:image">
+    <meta content="#f8cc1e" data-react-helmet="true" name="theme-color">
     <link href="./css/style.css" rel="stylesheet">
     <link href="/dist/css/style.css" rel="stylesheet">
     <title>MacroHQ</title>
@@ -12,7 +17,7 @@
 <body>
 <div class="absolute -z-10 bg-black w-screen h-screen" id="particles-js"></div>
 <div class="bg-neutral-900 flex justify-between">
-    <!-- Logo on the left -->
+    <!-- Logo on the left -->g
     <div class="space-x-1 flex items-center">
         <img class="p-1 rounded-3xl" src="./assets/logo.gif" alt="Logo" width="65px" height="65px"/>
         <p class="sm:text-2xl">MacroHQ</p>
