--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta content="MacroHQ Website" property="og:description">
     <meta content="https://macro-hq.github.io/Website/" property="og:url">
     <meta content="https://macro-hq.github.io/Website/assets/banner_slim.png" property="og:image">
+    <meta name="twitter:card" content="summary_large_image">
     <meta content="#f8cc1e" data-react-helmet="true" name="theme-color">
     <link href="./css/style.css" rel="stylesheet">
     <link href="/dist/css/style.css" rel="stylesheet">
@@ -17,7 +18,7 @@
 <body>
 <div class="absolute -z-10 bg-black w-screen h-screen" id="particles-js"></div>
 <div class="bg-neutral-900 flex justify-between">
-    <!-- Logo on the left -->g
+    <!-- Logo on the left -->
     <div class="space-x-1 flex items-center">
         <img class="p-1 rounded-3xl" src="./assets/logo.gif" alt="Logo" width="65px" height="65px"/>
         <p class="sm:text-2xl">MacroHQ</p>
