--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="MacroHQ" property="og:title">
-    <meta content="MacroHQ Website" property="og:description">
+    <meta content="We make high quality macros" property="og:description">
     <meta content="https://macro-hq.github.io/Website/" property="og:url">
     <meta content="https://macro-hq.github.io/Website/assets/banner.png" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
