--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <script src="./js/app.js"></script>
 </head>
 <body>
-<div class="absolute -z-10 bg-black w-screen h-screen" id="particles-js"></div>
+<div class="absolute -z-10 bg-black h-screen w-screen" id="particles-js"></div>
 <div class="bg-neutral-900 flex justify-between">
     <!-- Logo on the left -->
     <div class="space-x-1 flex items-center">
@@ -27,6 +27,14 @@
     <div class="space-x-1 flex items-center">
         <img class="invert" src="./assets/account.svg" alt="Account" width="48" height="48">
     </div>
+</div>
+<div class="absolute top-1/4 left-1/2 text-center transform -translate-x-1/2 -translate-y-1/2">
+    <p class="text-7xl">MacroHQ</p>
+    <p class="text-2xl">We make macros.</p>
+
+        <button class="border-white text-xl border-2 rounded-xl pl-2 pr-2">MacroHub</button>
+        <button class="border-white text-xl border-2 rounded-xl pl-2 pr-2">MacroHub</button>
+
 </div>
 </body>
 </html>
