--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link href="./css/style.css" rel="stylesheet">
     <link href="/dist/css/style.css" rel="stylesheet">
     <title>MacroHQ</title>
-    <link rel="icon" type="image/x-icon" href="./assets/logo.gif">
+    <link rel="icon" type="image/x-icon" href="./assets/logo_transparent.png">
     <script src="./js/particles.min.js"></script>
     <script src="./js/app.js"></script>
 </head>
@@ -21,8 +21,8 @@
 <div class="bg-neutral-900 flex justify-between">
     <!-- Logo on the left -->
     <div class="space-x-1 flex items-center p-1">
-        <img class="rounded-3xl" src="./assets/logo.gif" alt="Logo" width="65px" height="65px"/>
-        <p class="text-2xl pl-1 md:text-3xl">MacroHQ</p>
+        <img class="rounded-3xl" src="./assets/logo_transparent.png" alt="Logo" width="65px" height="65px"/>
+        <p class="pl-1 md:text-3xl">MacroHQ</p>
     </div>
     <!-- Button on the right -->
     <div class="space-x-1 flex items-center pr-1">
