--- a/src/resetpassword.html
+++ b/src/resetpassword.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="./css/style.css" rel="stylesheet">
     <link href="/dist/css/style.css" rel="stylesheet">
-    <title>Sign in</title>
+    <title>Reset password</title>
     <link href="./assets/logo_transparent.png" rel="icon" type="image/x-icon">
 </head>
 <body>
@@ -18,17 +18,9 @@
         <div class="w-full rounded-lg shadow border md:mt-0 sm:max-w-md xl:p-0 bg-neutral-800 border-neutral-700">
             <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
                 <h1 class="text-xl font-bold leading-tight tracking-tight md:text-2xl text-white">
-                    Sign in to your account
+                    Reset password
                 </h1>
                 <form action="#" class="space-y-4 md:space-y-6">
-                    <div>
-                        <label class="block mb-2 text-sm font-medium text-white" for="email">Your
-                            email</label>
-                        <input class="border sm:text-sm rounded-lg block w-full p-2.5 bg-neutral-700 border-gray-600 placeholder-gray-400 text-white focus:ring-blue-500 focus:border-blue-500"
-                               id="email" name="email"
-                               placeholder="name@company.com"
-                               required="" type="email">
-                    </div>
                     <div>
                         <label class="block mb-2 text-sm font-medium text-white" for="password">Password</label>
                         <input class="border sm:text-sm rounded-lg block w-full p-2.5 bg-neutral-700 border-gray-600 placeholder-gray-400 text-white focus:ring-blue-500 focus:border-blue-500"
@@ -36,18 +28,17 @@
                                required=""
                                type="password">
                     </div>
-                    <div class="flex items-center justify-between">
-                        <a class="text-sm font-medium hover:underline text-yellow-500" href="./forgotpassword.html">Forgot
-                            password?</a>
+                    <div>
+                        <label class="block mb-2 text-sm font-medium text-white" for="confirm_password">Confirm password</label>
+                        <input class="border sm:text-sm rounded-lg block w-full p-2.5 bg-neutral-700 border-gray-600 placeholder-gray-400 text-white focus:ring-blue-500 focus:border-blue-500"
+                               id="confirm_password" name="confirm_password" placeholder="••••••••"
+                               required=""
+                               type="password">
                     </div>
                     <button class="w-full text-white focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-yellow-600 hover:bg-yellow-700 focus:ring-yellow-800"
                             type="submit">
-                        Sign in
+                        Reset
                     </button>
-                    <p class="text-sm font-light text-gray-400">
-                        Don’t have an account yet?
-                        <a class="font-medium hover:underline text-yellow-500" href="./signup.html">Sign up</a>
-                    </p>
                 </form>
             </div>
         </div>
